
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________



2025 FEB 28a
  * in model/chem/_NH3_Plasma_32s/rodriguez2024v2.c
    - made changes so that it is more similar to rodriguez2024.c (only differences now are some
      small errors in R31, R106, R108, R109, R116, R119.)


2025 FEB 26a
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added CHEMMODEL_RODRIGUEZ2024V2
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - removed the definitions of HMINUSFROMEXCITEDSTATES* because they are now in chem.h
  * in model/chem/_NH3_Plasma_32s, added rodriguez2024v2.c
  * in model/chem/_NH3_Plasma_32s, added chem.h
    

2025 FEB 25a
  * in model/emfield/_Epotential*/emfield.c
    - in is_node_bdry_dielectric(), fixed a bug: must only return TRUE if the node is not a link
      node


2025 FEB 24a
  * in /model/emfield/_Epotential*/emfield.c
    - in find_linearization_coefficients_bdry_node_emfield(), fixed a bug related to link nodes
      (should not change the value of the node properties when is_node_link() is TRUE)


2025 FEB 17b
  * in model/metrics/_generic/metrics.c
    - in find_unit_vector_normal_to_boundary_plane(), fixed a bug by adding the line
      'if (vecmag==0.0) return(FALSE);'
  * in model/share/fluid_share.c
    - added the call to find_distance_between_near_bdry_node_and_boundary_plane() to determine
      if the bdry node is valid or not
      

2025 FEB 17a
  * in model/thermo/_generic/electronimpact.c
    - in _ke_kl_N2vib_from_Te(), improved the curve fits
    

2025 FEB 06b
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_dSe_dU_transport_Rodriguez2025(), fixed a bug (missing ; at end of line)
    

2025 FEB 06a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c